--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,11 @@ version: 2.1
 jobs:
   build_and_test:
     docker:
-      - image: docker:18.09
+      - image: docker:18.09.6
     steps:
       - checkout
       - setup_remote_docker
+        - version: 18.09.3
       - run: apk add --no-cache --no-progress make git
       - run: make test
   build_and_test_changed:
