--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,8 @@ jobs:
       - image: docker:18.09.6
     steps:
       - checkout
-      - setup_remote_docker
-        - version: 18.09.3
+      - setup_remote_docker:
+          version: 18.09.3
       - run: apk add --no-cache --no-progress make git
       - run: make test
   build_and_test_changed:
